--- a/login.html
+++ b/login.html
@@ -38,10 +38,12 @@
 
           <button type="submit" class="btn btn-primary" formaction="/landing.html">Entrar</button>
           <hr>
-          <button type="submit" class="btn btn-secondary" formaction="/register.html">Registar</button>
         </form>
-        
-      </div>
+        <div class="register-section">
+          <h5>Não tem conta?⠀</h5>
+          <a href="./index.html"><h6>Registe-se</h6></a>
+        </div>
+      </div> 
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
