--- a/login.html
+++ b/login.html
@@ -25,23 +25,23 @@
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">E-mail</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Palavra Passe</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" class="form-control" id="exampleInputPassword1" required>
           </div>
           <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Lembrar Palavra Passe</label>
           </div>
 
-          <button type="submit" class="btn btn-primary" formaction="/landing.html">Entrar</button>
+          <button type="submit" class="btn btn-primary" formaction="/index.html">Entrar</button>
           <hr>
         </form>
         <div class="register-section">
           <h5>Não tem conta?⠀</h5>
-          <a href="./index.html"><h6>Registe-se</h6></a>
+          <a href="./register.html"><h6>Registe-se</h6></a>
         </div>
       </div> 
     </div>
