--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | FolkNews</title>
-
+  <title>FolkNews</title>
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand">Movies<span>.</span></a>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <input class="btn logout" type="submit">Procurar</input>
-              <input class="btn logout" type="submit">Popular</input>
-              <input class="btn logout" type="submit">Política</input>
-              <input class="btn logout" type="submit">Tecnologia</input>
-              <input class="btn logout" type="submit">Saúde</input>
-              <input class="btn logout" type="submit">Desporto</input>
-              <button class="btn logout" type="submit" formaction="/index.html">Sair</button>
-            </form>
+  <div>
+    <div class="col-md-12">
+      <nav class="navbar navbar-dark">
+        <div class="container-fluid">
+          <div>
+            <a class="navbar-brand">FolkNews<span>.</span></a>
           </div>
-        </nav>
+          <div class="teste">
+            <a href="" class="popular">Popular</a>
+            <a href="" class="politica">Política</a>
+            <a href="" class="tecnologia">Tecnologia</a>
+            <a href="" class="saude">Saúde</a>
+            <a href="" class="desporto">Desporto</a>
+            <a href="" class="outros">Outros</a>
+            <a href="" class="login"><img src="./assets/icons/user.svg" alt=""></a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
