Update auth pages design

--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
         </div>
       </div> 
     </div>
+    <img class="bg-img-cloud" src="./assets/images/cloud-image.svg" alt="">
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
