--- a/index.html
+++ b/index.html
@@ -44,16 +44,22 @@
       <!-- <hr> -->
     </div>
     
-    <div class="card mb-3" style="max-width: 50%; margin: 58px;">
+    <div class="card mb-3" style="max-width: 65%; margin: 58px;">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="./assets/images/alfa.svg" class="card-img" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-provider">
+              <span>
+                <img src="./assets/icons/crown.svg" alt="" />
+              </span> 
+              MotorSport Brasil
+            </p>
+            <p class="card-title">Alfa Romeo continua na fórmula 1 em 2021</p>
+            <p class="card-text">‎Após o incêndio assustador que se seguiu ao ‎‎grande acidente de Romain Grosjean no Bahrein,‎‎você poderia perdoar Kimi Raikkonen por estar um pouco nervoso depois...</p>
+            <p class="card-text"><small class="text-muted">Há 3 horas - MotorSport Brasil</small></p>
           </div>
         </div>
       </div>
