--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="col-md-12">
     <nav class="navbar navbar-light">
-      <a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt=""></a>
+      <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
         <a href="">Popular</a>
@@ -22,7 +22,9 @@
         <a href="">Saúde</a>
         <a href="">Desporto</a>
         <a href="">
+        <a class="user" href="./login.html">
           <img src="./assets/icons/user-register.svg" alt="">
+        </a>
         </a>
       </div>
     </nav>
@@ -38,7 +40,7 @@
       </div>
     </div>
     
-    <div class="col-md-12 separator">
+    <div class="separator">
       <img src="./assets/icons/icon-separate1.svg" alt="">
       <h1>Ultimas Notícias</h1>
       <!-- <hr> -->
