--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               MotorSport Brasil
             </p>
             <p class="card-title">Alfa Romeo continua na fórmula 1 em 2021</p>
-            <p class="card-text">‎Após o incêndio assustador que se seguiu ao ‎‎grande acidente de Romain Grosjean no Bahrein,‎‎você poderia perdoar Kimi Raikkonen por estar um pouco nervoso depois...</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis quaerat aliquam voluptate minus eos! In eius assumenda quos sint alias. Beatae inventore numquam repellat impedit in alias porro molestias? Lorem ipsum dolor sit amet</p>
             <p class="card-text"><small class="text-muted">Há 3 horas - MotorSport Brasil</small></p>
           </div>
         </div>
