Article hover effect

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
+              <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
@@ -62,7 +65,7 @@
                 MotorSport Brasil
               </p>
               <p class="card-title">Alfa Romeo continua na fórmula 1 em 2021</p>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis quaerat aliquam voluptate minus eos! In eius assumenda quos sint alias. Beatae inventore numquam repellat impedit in alias porro molestias? Lorem ipsum dolor sit amet</p>
+              <p class="card-text">‎Após o incêndio assustador que se seguiu ao ‎‎grande acidente de Romain Grosjean no Bahrein,‎‎você poderia perdoar Kimi Raikkonen por estar um pouco nervoso depois...</p>
               <p class="card-text"><small class="text-muted">Há 3 horas - MotorSport Brasil</small></p>
             </div>
           </div>
@@ -85,19 +88,22 @@
       <div class="card mb-3" style="max-width: 100%; margin: 58px;">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/alfa.svg" class="card-img" alt="...">
+            <img src="./assets/images/legionella.png" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
+            <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
                 </span> 
-                MotorSport Brasil
+                Correio da Manhã
               </p>
-              <p class="card-title">Alfa Romeo continua na fórmula 1 em 2021</p>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis quaerat aliquam voluptate minus eos! In eius assumenda quos sint alias. Beatae inventore numquam repellat impedit in alias porro molestias? Lorem ipsum dolor sit amet</p>
-              <p class="card-text"><small class="text-muted">Há 3 horas - MotorSport Brasil</small></p>
+              <p class="card-title">Não se sabe ainda de onde veio o surto da legionela</p>
+              <p class="card-text">Administração Regional de Saúde (ARS) do Norte revelou este domingo que se verificou uma "diminuição acentuada" de casos de `legionella´ no Grande Porto, desde que...</p>
+              <p class="card-text"><small class="text-muted">Há 4 horas - Correio da Manhã</small></p>
             </div>
           </div>
         </div>
@@ -106,19 +112,22 @@
       <div class="card mb-3" style="max-width: 100%; margin: 58px;">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/alfa.svg" class="card-img" alt="...">
+            <img src="./assets/images/iphone.png" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
+              <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
                 </span> 
-                MotorSport Brasil
+                TechTudo
               </p>
-              <p class="card-title">Alfa Romeo continua na fórmula 1 em 2021</p>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis quaerat aliquam voluptate minus eos! In eius assumenda quos sint alias. Beatae inventore numquam repellat impedit in alias porro molestias? Lorem ipsum dolor sit amet</p>
-              <p class="card-text"><small class="text-muted">Há 3 horas - MotorSport Brasil</small></p>
+              <p class="card-title">Apple lança um novo smartphone</p>
+              <p class="card-text">Facebook continua em guerra aberta com a Apple, que este ano começou a implementar várias medidas para dar aos seus utilizadores maior transparência em torno dos dados pessoais...</p>
+              <p class="card-text"><small class="text-muted">Há 5 horas - TechTudo</small></p>
             </div>
           </div>
         </div>
@@ -129,7 +138,7 @@
 
     <div class="separator">
       <img src="./assets/icons/icon-separate1.svg" alt="">
-      <h1>Ultimas Notícias</h1>
+      <h1>Notícias Locais</h1>
       <hr>
     </div>
     
@@ -142,6 +151,9 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
+              <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
@@ -176,6 +188,9 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
+              <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
@@ -198,6 +213,9 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
+              <div class="click">
+                <img src="./assets/icons/right-arrow.svg" alt="">
+              </div>
               <p class="card-provider">
                 <span>
                   <img src="./assets/icons/crown.svg" alt="" />
