--- a/article-1.html
+++ b/article-1.html
@@ -3,9 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>FolkNews</title>
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles/article-1.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Artigo</h1>
+  <div class="col-md-12">
+    <nav class="navbar navbar-light">
+      <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
+      <div class="right">
+        <a class="flag" href="">Popular</a>
+        <a href="">Popular</a>
+        <a href="">Politica</a>
+        <a href="">Tecnologia</a>
+        <a href="">Saúde</a>
+        <a href="">Desporto</a>
+        <a href="">
+          <a class="user" href="./login.html">
+            <img src="./assets/icons/user-register.svg" alt="">
+          </a>
+        </a>
+      </div>
+    </nav>
+    
+    <div class="col-md-4 mx-auto">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <img style="width: 22px;" src="./assets/icons/search.svg" alt="">
+          </span>
+        </div>
+        <input type="text" class="form-control" placeholder="Pesquisar tópicos, locatizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
+      </div>
+    </div>
+    </div>
 </body>
 </html>
