--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <label class="form-check-label" for="exampleCheck1">Lembrar Palavra Passe</label>
           </div>
 
-          <button type="submit" class="btn btn-primary" formaction="/index.html">Entrar</button>
+          <button type="submit" class="btn btn-primary" formaction="/index-auth.html">Entrar</button>
           <hr>
         </form>
         <div class="register-section">
