select user type

--- a/article-1.html
+++ b/article-1.html
@@ -36,9 +36,9 @@
             <img style="width: 22px;" src="./assets/icons/search.svg" alt="">
           </span>
         </div>
-        <input type="text" class="form-control" placeholder="Pesquisar tópicos, locatizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Pesquisar tópicos, localizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
       </div>
     </div>
-    </div>
+  </div>
 </body>
 </html>
