--- a/index-auth.html
+++ b/index-auth.html
@@ -36,7 +36,7 @@
             <img style="width: 22px;" src="./assets/icons/search.svg" alt="">
           </span>
         </div>
-        <input type="text" class="form-control" placeholder="Pesquisar tópicos, locatizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Pesquisar tópicos, localizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
       </div>
     </div>
     
