--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         </form>
         <div class="register-section">
           <h5>Não tem conta?⠀</h5>
-          <a href="./register.html"><h6>Registe-se</h6></a>
+          <a href="./loginEscolha.html"><h6>Registe-se</h6></a>
         </div>
       </div> 
     </div>
