--- a/loginEscolha.html
+++ b/loginEscolha.html
@@ -23,6 +23,7 @@
       <div class="col-md-5 login">
         <h1>Escolha o tipo de conta<span>.</span></h1>
        
+        <form>
         <div class="retangulos">
 
           <div class="retangulo">
@@ -39,10 +40,11 @@
         </div>
         
         <div class="button-wapper">
-          <button type="submit" class="btn btn-primary" formaction="/register-2.html">
+          <button type="submit" class="btn btn-primary" formaction="/register.html">
             <img src="./assets/icons/right-arrow.svg" alt="">
           </button>
         </div>
+        </form>
 
       </div> 
     </div>
