Article page, missing commentary

--- a/index-auth.html
+++ b/index-auth.html
@@ -92,7 +92,7 @@
       <div id="article-redirect" class="card mb-3" style="max-width: 100%; margin: 58px; ">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/alfa.svg" class="card-img" alt="...">
+            <img src="./assets/images/alfa.jpg" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -126,7 +126,7 @@
       <div class="card mb-3" style="max-width: 100%; margin: 58px;">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/legionella.png" class="card-img" alt="...">
+            <img src="./assets/images/legionela.jpg" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -147,7 +147,7 @@
       <div class="card mb-3" style="max-width: 100%; margin: 58px;">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/iphone.png" class="card-img" alt="...">
+            <img src="./assets/images/iphone.jpg" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
