--- a/article-auth.html
+++ b/article-auth.html
@@ -18,14 +18,13 @@
       <a class="navbar-brand" href="./index-auth.html"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
-        <a href="">Popular</a>
         <a href="">Politica</a>
         <a href="">Tecnologia</a>
         <a href="">Saúde</a>
         <a href="">Desporto</a>
         <a href="">
           <a class="user" href="./login.html">
-            <img src="./assets/icons/user-register.svg" alt="">
+            <img src="./assets/icons/user-auth.svg" alt="">
           </a>
         </a>
       </div>
