--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
-        <a href="">Popular</a>
         <a href="">Politica</a>
         <a href="">Tecnologia</a>
         <a href="">Saúde</a>
@@ -33,7 +32,7 @@
       <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text">
-            <img style="width: 22px;" src="./assets/icons/search.svg" alt="">
+            <img style="width: 22px;" src="./assets/icons/search.svg" alt="Procurar">
           </span>
         </div>
         <input type="text" class="form-control" placeholder="Pesquisar tópicos, localizações e fontes" aria-label="Username" aria-describedby="basic-addon1">
@@ -51,7 +50,7 @@
       <div id="article-redirect" class="card mb-3" style="max-width: 100%; margin: 58px; ">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="./assets/images/alfa.jpg" class="card-img" alt="...">
+            <img src="./assets/images/alfa.jpg" class="card-img" alt="Alfa Romeo F1">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -60,7 +59,7 @@
               </div>
               <p class="card-provider">
                 <span>
-                  <img src="./assets/icons/crown.svg" alt="" />
+                  <img src="./assets/icons/crown.svg" alt="Premium" />
                 </span> 
                 MotorSport Brasil
               </p>
