--- a/index-auth.html
+++ b/index-auth.html
@@ -16,7 +16,6 @@
       <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
-        <a href="">Popular</a>
         <a href="">Politica</a>
         <a href="">Tecnologia</a>
         <a href="">Saúde</a>
@@ -89,7 +88,7 @@
     
     <div class="col-md-12 grid">
       
-      <div id="article-redirect" class="card mb-3" style="max-width: 100%; margin: 58px; ">
+      <div id="auth" class="card mb-3" style="max-width: 100%; margin: 58px; ">
         <div class="row no-gutters">
           <div class="col-md-4">
             <img src="./assets/images/alfa.jpg" class="card-img" alt="...">
@@ -261,7 +260,7 @@
       <p>&copy; Copyright FolkNews S.A.</p>
     </footer>
   </div>
-  <script src="./scripts/redirect.js"></script>
+  <script src="./scripts/redirect_auth.js"></script>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
