--- a/index-auth.html
+++ b/index-auth.html
@@ -13,7 +13,7 @@
 <body>
   <div class="col-md-12">
     <nav class="navbar navbar-light">
-      <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
+      <a class="navbar-brand" href="./index-auth.html"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
         <a href="">Politica</a>
@@ -122,7 +122,7 @@
         </ul>
       </div>
       
-      <div class="card mb-3" style="max-width: 100%; margin: 58px;">
+      <div id="auth-legionela" class="card mb-3" style="max-width: 100%; margin: 58px;">
         <div class="row no-gutters">
           <div class="col-md-4">
             <img src="./assets/images/legionela.jpg" class="card-img" alt="...">
