--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="col-md-12">
     <nav class="navbar navbar-light">
-      <a class="navbar-brand" href="./#"><img src="./assets/icons/logo.svg" alt=""></a>
+      <a class="navbar-brand" href="./index.html"><img src="./assets/icons/logo.svg" alt=""></a>
       <div class="right">
         <a class="flag" href="">Popular</a>
         <a href="">Politica</a>
